# ComfyUI-Trellis2

./: README.md  nodes.py  pyproject.toml  texture_projection_multiview.py
example_workflows/: Advanced_api.json  Projection_MultiView_Hy2.0_Qwen.json  Projection_MultiView_Hy2.0_Qwen_2Views.json  Projection_MultiView_Hy2.0_Qwen_4Views.json  Projection_MultiView_with_Hunyuan3D2.0.json  Simple_api.json
projection/: texture_projection_multiview.py
trellis2/modules/: image_feature_extractor.py
trellis2/pipelines/: trellis2_image_to_3d.py
trellis2/pipelines/samplers/: __init__.py  flow_euler.py
wheels/Windows/Torch2100/: custom_rasterizer-0.1-cp311-cp311-win_amd64.whl  custom_rasterizer-0.1-cp312-cp312-win_amd64.whl
wheels/Windows/Torch2100/CUDA 13.1/: cumesh-0.0.1-cp313-cp313-win_amd64.whl  custom_rasterizer-0.1-cp311-cp311-win_amd64.whl  custom_rasterizer-0.1-cp312-cp312-win_amd64.whl  custom_rasterizer-0.1-cp313-cp313-win_amd64.whl  flex_gemm-1.0.0-cp313-cp313-win_amd64.whl  nvdiffrast-0.4.0-cp313-cp313-win_amd64.whl  o_voxel-0.0.1-cp313-cp313-win_amd64.whl
wheels/Windows/Torch270/: custom_rasterizer-0.1-cp311-cp311-win_amd64.whl  custom_rasterizer-0.1-cp312-cp312-win_amd64.whl
wheels/Windows/Torch280/: custom_rasterizer-0.1-cp311-cp311-win_amd64.whl  custom_rasterizer-0.1-cp312-cp312-win_amd64.whl
