[project]
name = "trellis2"
description = "ComfyUI Wrapper for Microsoft Trellis.2 - Native and Compact Structured Latents for 3D Generation"
version = "1.0.18"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "meshlib",
    "requests",
    "pymeshlab",
    "opencv-python",
    "scipy",
    "open3d>=0.19.0",
    "plotly",
    "trimesh",
    "rembg",
    "triton",
    "transformers",
    "huggingface_hub",
    "safetensors",
    "accelerate",
    "einops",
    "omegaconf",
    "addict",
    "plyfile",
    "e3nn",
    "tqdm",
    "numpy",
    "torch>=2.9.0,<2.10.0",
    "torchvision",
    "zstandard",
    "easydict",
]

[project.urls]
Repository = "https://github.com/pollockjj/ComfyUI-Trellis2"

[tool.comfy]
PublisherId = "pollockjj"
DisplayName = "ComfyUI-Trellis2"
Icon = ""

[tool.comfy.isolation]
can_isolate = true
package_manager = "conda"
share_torch = false
conda_channels = ["conda-forge"]
conda_dependencies = []
conda_python = "3.12.*"
sandbox_mode = "disabled"
find_links = ["wheels/Linux/Torch291"]

